--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   ],
   "author": "gbk <ck0123456@gmail.com>",
   "license": "MIT",
-  "homepage": "https://github.com/nowa-webpack/nowa-install#readme"
+  "homepage": "https://github.com/nowa-webpack/nowa-install#readme",
+  "dependencies": {
+    "npminstall": "^1.10.1"
+  }
 }
